Fix della classe GetHandler